Add error prone and null away. Add a lot of NonNull and Nullable annotations.